welcome.lessons.welcome.bat.bool2.LastDigit2.scala.error
lastDigit:8: error: type mismatch;
 found   : Unit
 required: Boolean
  if (a%10==c%10){
  ^